--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
 *{
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+section{
+    width: 100%;
+    height: 100vh;
+    background-size:  cover;
+    scroll-snap-align: start;
+}
+
+.container{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    scroll-behavior: smooth;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
 }
 
 #name_heading{
