--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html, body{
+    overflow: hidden;
+}
+
 .container{
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
@@ -13,15 +17,18 @@
 
 section{
     height: 100vh;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     scroll-snap-align: start;
 }
 
 .about{
     background-color: #1f1c2f;
     color: #8febd5;
+    /* background-image: radial-gradient(#45c5a7 1.4000000000000001px, #000000b5 1.4000000000000001px); */
+    /* background-size: 28px 28px; */
+
 }
 
 .buttons{
