--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@ a, a:visited, a:hover, a:active {
     color: inherit;
 }
 
-.socials_buttons_list li:hover{
+.socials_buttons_list li:hover {
     color: black;
-    text-shadow: black;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.726);
 }
 
 .about_right{
@@ -89,6 +89,7 @@ a, a:visited, a:hover, a:active {
     padding-right: 80px; 
     padding-bottom: 80px;
 }
+
 .about_left{
     width: 59%;
     float: left;
@@ -99,7 +100,12 @@ a, a:visited, a:hover, a:active {
     float: right;
     width: 350px;
     height: 420px;
+}
 
+/* About me, hobbies page */
+.hobbies{
+    background-color: #13505B;
+    color: white;
 }
 
 .buttons{
