--- a/style.css
+++ b/style.css
@@ -108,6 +108,26 @@ a, a:visited, a:hover, a:active {
     color: white;
 }
 
+#heading{
+    padding-top: 60px;
+    font-size: 65px;
+    font-weight: bold;
+    text-align: center;
+}
+
+#hobb_cont{
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 40px;
+    font-size: 17px;
+}
+
+.highlight_yellow{
+    color: #E4F335;
+}
+
+/* Links page */
+
 .buttons{
     background-color: #BDE5E1;
     color: #025764;
