--- a/style.css
+++ b/style.css
@@ -57,19 +57,42 @@ section{
     list-style-type: none;
     overflow: hidden;
     padding-top: 20px;
+    cursor: pointer;
 }
 
 .socials_buttons_list li{
-    font-size: larger;
-    width: 100px;
-    height: 30px;
-    background-color: white;
-    color: black;
     display: inline-block;
+    margin-right: 20px;
+}
+
+.socials_buttons_list li > a{
+    width: 140px;
+    font-size: 1.2rem;
+    border: white 0.15em solid;
     text-align: center;
-    margin-right: 40px;
+    padding: 0.25em 1.25em 0.25em 1.25em;
+    color: white;
+    display: inline-block;
     border-radius: 8px;
     font-weight: bolder;
+    text-shadow: 
+    0 0 0.125em black,
+    0 0 0.45em white;
+    box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
+    position: relative;
+}
+
+a::before{
+    position: absolute;
+    content: "";
+    background: white;
+    top: 103%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+    filter: blur(1.5em);
 }
 
 a, a:visited, a:hover, a:active {
