--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ section{
 
 .socials_buttons_list li > a{
     width: 140px;
+    cursor: pointer;
     font-size: 1.2rem;
     border: white 0.15em solid;
     text-align: center;
@@ -82,27 +83,17 @@ section{
     position: relative;
 }
 
-a::before{
-    position: absolute;
-    content: "";
-    background: white;
-    top: 103%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    
-    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
-    filter: blur(1.5em);
+.socials_buttons_list li >a:hover,  .socials_buttons_list li >a:focus{
+    background-color: white;
+    color: black;
+    border: white 0.15em solid;
+    text-shadow: none;
+    box-shadow: 0 0 1em 0 white;
 }
 
 a, a:visited, a:hover, a:active {
     text-decoration: none;
     color: inherit;
-}
-
-.socials_buttons_list li:hover {
-    color: black;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.726);
 }
 
 .about_right{
