--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ section {
   left: 10px;
   background-color: black;
   padding: 10px;
-  border: 1px solid #00ff00; /* Neon border */
+  border: 1px solid #00ff00;
 }
 
 #nav-menu a {
