--- a/styles/home.css
+++ b/styles/home.css
@@ -1,84 +1,73 @@
-.about {
-    padding-left: 80px;
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #000;
+  color: #fff;
+  padding: 0 20px;
+}
+
+.home_content {
+  text-align: center;
+  max-width: 600px;
 }
 
 #name_heading {
-    width: fit-content;
-    font-family: 'Inter', sans-serif;
-    font-size: 100px;
-    padding-top: 60px;
-    background-image: url(../resources/images/heading_bg.png);
-    background-repeat: repeat;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  font-family: "Inter", sans-serif;
+  font-size: 100px;
+  padding-top: 60px;
+  background-image: url(../resources/images/heading_bg.png);
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 0;
 }
 
-.head_description {
-    width: 60%;
-    padding-top: 20px;
-    font-family: 'Roboto Mono', monospace;
-    font-size: 17px;
+#intro {
+  font-family: "Roboto Mono", monospace;
+  font-size: 1.5rem;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+#degree {
+  font-family: "Roboto Mono", monospace;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
 }
 
 .socials_buttons_list {
-    list-style-type: none;
-    overflow: hidden;
-    padding-top: 20px;
-    cursor: pointer;
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0 0;
+  display: flex;
+  justify-content: center;
 }
 
 .socials_buttons_list li {
-    display: inline-block;
-    margin-right: 20px;
+  margin: 0 10px;
 }
 
 .socials_buttons_list li > a {
-    width: 140px;
-    cursor: pointer;
-    font-size: 1.2rem;
-    border: white 0.15em solid;
-    text-align: center;
-    padding: 0.25em 1.25em;
-    color: white;
-    display: inline-block;
-    border-radius: 8px;
-    font-weight: bolder;
-    text-shadow: 
-        0 0 0.125em black,
-        0 0 0.45em white;
-    box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
-    position: relative;
+  font-size: 1rem;
+  border: white 0.15em solid;
+  text-align: center;
+  padding: 0.5em 1.25em;
+  color: white;
+  display: inline-block;
+  border-radius: 8px;
+  font-weight: bold;
+  text-shadow: none;
+  box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+  text-decoration: none;
 }
 
-.socials_buttons_list li > a:hover, .socials_buttons_list li > a:focus {
-    background-color: white;
-    color: black;
-    border: white 0.15em solid;
-    text-shadow: none;
-    box-shadow: 0 0 1em 0 white;
-}
-
-a, a:visited, a:hover, a:active {
-    text-decoration: none;
-    color: inherit;
-}
-
-.about_right {
-    float: right;
-    width: 40%;
-    padding-top: 80px;
-    padding-right: 80px;
-    padding-bottom: 80px;
-}
-
-.about_left {
-    width: 59%;
-    float: left;
-}
-
-#mrunal_home_pg {
-    border-radius: 30px;
-    float: right;
-    width: 350px;
-    height: 420px;
+.socials_buttons_list li > a:hover,
+.socials_buttons_list li > a:focus {
+  background-color: white;
+  color: black;
+  box-shadow: 0 0 1em 0 white;
+  text-shadow: none;
 }
